# smarthome-mcp

./: .mcp.json  Cargo.toml  Dockerfile  README.md  SPEC.md  biome.json  config.example.toml  docker-compose.yml  env.example  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: backend_status.rs  config.rs  ha-client.test.ts  ha-client.ts  index.ts  lib.rs  main.rs  server.rs  server.test.ts  server.ts  types.ts  util.rs
src/auth/: ip_whitelist.rs  middleware.rs  mod.rs  scopes.rs  token_proxy.rs  token_static.rs
src/ha/: client.rs  mod.rs
src/z2m/: client.rs  mod.rs
tasks/: plan.md
tests/: mcp_transport_test.rs
