[package]
name = "smarthome-mcp"
version = "0.2.0"
edition = "2024"
description = "MCP server bridging Claude Code to Home Assistant and Zigbee2MQTT"
license = "MIT"

[dependencies]
rmcp = { version = "2.2", features = ["server", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
toml = "1.1.3"
reqwest = { version = "0.13.4", features = ["json"] }
rumqttc = "0.25.1"
ipnet = { version = "2.12.0", features = ["serde", "schemars1"] }
thiserror = "2.0.18"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
